--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: lpm-publish-latest
 
 on:
   release:
-    types: [published]
+    types: [released]
 
 jobs:
   publish:
@@ -12,11 +12,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - run: npm install
-      - run: npm install
       - run: |
           echo -e "//registry-lpm.listenai.com/:_password=${{ secrets.LPM_ZHUOBIN_TOKEN }}" > .npmrc
           echo -e "//registry-lpm.listenai.com/:username=zbzhao" >> .npmrc
           echo -e "//registry-lpm.listenai.com/:email=zbzhao@listenai.com" >> .npmrc
           echo -e "//registry-lpm.listenai.com/:always-auth=true" >> .npmrc
+      - run: npm install --registry=https://registry-lpm.listenai.com
       - run: npm publish --registry=https://registry-lpm.listenai.com
