--- a/.github/workflows/prereleased.yml
+++ b/.github/workflows/prereleased.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - run: npm install
       - run: |
           echo -e "//registry-lpm.listenai.com/:_password=${{ secrets.LPM_ZHUOBIN_TOKEN }}" > .npmrc
           echo -e "//registry-lpm.listenai.com/:username=zbzhao" >> .npmrc
           echo -e "//registry-lpm.listenai.com/:email=zbzhao@listenai.com" >> .npmrc
           echo -e "//registry-lpm.listenai.com/:always-auth=true" >> .npmrc
+      - run: npm install --registry=https://registry-lpm.listenai.com
       - run: npm publish --tag=beta --registry=https://registry-lpm.listenai.com
